deployment-PHP-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app-container
        image: oneclouddh/get-started:demo-php-app-V1.0 
        ports:
        - containerPort: 80
