service-PHP-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-clusterip-service
spec:
  selector:
    app: php-app
  ports:
  - protocol: TCP
    port: 20210
    targetPort: 80
  type: ClusterIP
